# js-engine

./: .gitignore  CMakeLists.txt
include/: c_api.h  execClient.h  executor.h
python/: jsexec.py  test.js
src/: c_api.cpp  execClient.cpp  executor.cpp  main.cpp
